--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -7,8 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="fn100.js" async defer type="module"></script>
+    <script src="closure.js" async defer type="module"></script>
+    <script src="memoizing.js" async defer type="module"></script>
+    <script src="asynchronus.js" async defer type="module"></script>
+    <style>
+        .square{
+            width: 30px;
+            height: 30px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: red;
+            transition: all 2000ms;
+        }
+
+    </style>
 </head>
 <body>
+<!-- <h1>Hello!</h1> -->
 
+
+<div class="square"></div>
 </body>
 </html>
