Add new fnctions

--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -46,6 +46,19 @@
 
 </div>
 
+ <div id="div4">To jest div4
+ <p>text</p>
+ <p>text</p>
+ <p>text</p>
+ <p>text</p>
+ <p>text</p>
+ </div>
+
+ <div id="div5">
+     <ul id="ul">
+
+     </ul>
+ </div>
 <!--<div class="square"></div>-->
 </body>
 </html>
