--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -9,7 +9,9 @@
     <script src="fn100.js" async defer type="module"></script>
 <!--    <script src="closure.js" async defer type="module"></script>-->
 <!--    <script src="memoizing.js" async defer type="module"></script>-->
-    <script src="asynchronus.js" async defer type="module"></script>
+<!--    <script src="asynchronus.js" async defer type="module"></script>-->
+<!--    <script src="zad.js" async defer type="module"></script>-->
+<!--    <script src="async_example2.js" async defer type="module"></script>-->
     <style>
         .square{
             width: 30px;
@@ -25,7 +27,7 @@
 </head>
 <body>
  <h1>Hello!</h1>
- <div id="div1">
+ <!-- <div id="div1">
      <p>Jakiś text</p>
      <p>Dalsza czesc textu</p>
      <p>Dalsza czesc textu</p>
@@ -58,7 +60,9 @@
      <ul id="ul">
 
      </ul>
- </div>
+ </div> -->
 <!--<div class="square"></div>-->
+<button id="job1">Job!</button>
+<button id="job2">Job after job!</button>
 </body>
 </html>
