--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -64,5 +64,8 @@
 <!--<div class="square"></div>-->
 <button id="job1">Job!</button>
 <button id="job2">Job after job!</button>
+<ul id="personList"><h3>Nasi goście:</h3>
+
+</ul>
 </body>
 </html>
