--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -6,12 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="fn100.js" async defer type="module"></script>
+<!--    <script src="fn100.js" async defer type="module"></script>-->
 <!--    <script src="closure.js" async defer type="module"></script>-->
 <!--    <script src="memoizing.js" async defer type="module"></script>-->
 <!--    <script src="asynchronus.js" async defer type="module"></script>-->
 <!--    <script src="zad.js" async defer type="module"></script>-->
 <!--    <script src="async_example2.js" async defer type="module"></script>-->
+    <script src="astronimical.js" async defer type="module"></script>
     <style>
         .square{
             width: 30px;
