--- a/one1000functions/index.html
+++ b/one1000functions/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="fn100.js" async defer type="module"></script>
+<!--    <script src="object.js" async defer ></script>-->
+<!--    <script src="auto.js" async defer ></script>-->
 <!--    <script src="closure.js" async defer type="module"></script>-->
 <!--    <script src="memoizing.js" async defer type="module"></script>-->
 <!--    <script src="asynchronus.js" async defer type="module"></script>-->
